tooling/nargo_cli/tests/snapshots/execution_success/shift_right_overflow/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(x: u8) {
    let value: u8 = 1_u8 >> x;
    assert(value == 0_u8);
}
